# way-cooler-lock

./: Cargo.toml  README.md  build.rs  notes.txt
pam/: wc-lock
src/: color.rs  input.rs  main.rs  window.rs
src/effects/: blur.rs  mod.rs
src/pam/: mod.rs  wrapper.c
