[package]
name = "wc-lock"
build = "build.rs"
version = "0.0.0"
authors = ["Timidger <APragmaticPlace@gmail.com>"]
description = "Lockscreen program for Way Cooler"
license = "MIT"

[dependencies]
wayland-sys = { version = "^0.6.0", features = ["client", "dlopen"] }
wayland-client = { version = "0.9.*", features = ["cursor", "dlopen"] }
wayland-kbd = "0.9.0"
tempfile = "2.1"
byteorder = ">= 0.3, < 0.6"
image = "^0.10.3"
dbus = "0.5.2"
libc = "0.2.*"


[build-dependencies]
gcc = "0.3"
