[package]
name = "wc-lock"
build = "build.rs"
version = "0.2.0"
authors = ["Timidger <APragmaticPlace@gmail.com>"]
description = "Lockscreen program for Way Cooler"
license = "MIT"

[dependencies]
way-cooler-client-helpers = { version = "0.1" }
wayland-sys = { version = "^0.9.0", features = ["client", "dlopen"] }
wayland-client = { version = "0.9.*", features = ["cursor", "dlopen"] }
wayland-kbd = "0.9.0"
tempfile = "2.1"
byteorder = ">= 0.3, < 0.6"
libc = "0.2.*"
clap = "2.*"
dbus = "0.5"
image = "^0.10.3"
rand = "0.3"


[build-dependencies]
gcc = "0.3"
wayland-scanner = { version = "0.9.1" }
